BBB-944 fixed autocomplete hint alignment issue

--- a/src/main/resources/assets/sass/_autocomplete.scss
+++ b/src/main/resources/assets/sass/_autocomplete.scss
@@ -142,6 +142,11 @@
 			border-color: $govuk-error-colour;
 			border-width: 4px;
 		}
+
+		.autocomplete__hint {
+			padding-left: 6px;
+			padding-top: 6px;
+		}
 	}
 }
 
